# deckgym-core

./: Cargo.toml
src/: game.rs  heuristics.rs  lib.rs  optimize.rs  shaping.rs  simulate.rs  wasm_bindings.rs
src/actions/: mod.rs
src/state/: mod.rs
tests/: heuristic_test.rs
