[package]
name = "deckgym"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust library for simulating Pokémon TCG Pocket games."

[dependencies]
rand = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
indexmap = "2.7.0"
uuid = { version = "1.17.0", features = ["v4", "js"] }
strum = "0.27"
strum_macros = "0.27"

# CLI-only dependencies (feature-gated)
clap = { version = "4.5.21", features = ["derive"], optional = true }
env_logger = { version = "0.11.6", optional = true }
colored = { version = "3", optional = true }
indicatif = { version = "0.18.2", optional = true }
num-format = { version = "0.4.4", optional = true }
humantime = { version = "2.1.0", optional = true }

# Parallel simulation (feature-gated)
rayon = { version = "1.10", optional = true }

# WASM bindings (feature-gated)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Other optional dependencies
csv = { version = "1.3.1", optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = ["cli", "parallel"]
cli = ["clap", "env_logger", "colored", "indicatif", "num-format", "humantime"]
parallel = ["rayon"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "getrandom"]
test-utils = []
python = ["pyo3"]
tui = ["ratatui", "crossterm"]
csv-export = ["csv"]

[lib]
name = "deckgym"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deckgym"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "play_benchmark"
harness = false

[[bench]]
name = "card_lookup_benchmark"
harness = false

[[bench]]
name = "rare_candy_benchmark"
harness = false

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "temp_deck_generator"
path = "src/bin/temp_deck_generator.rs"
required-features = ["cli"]

[[bin]]
name = "card_enum_generator"
path = "src/bin/card_enum_generator.rs"
required-features = ["cli"]

[[bin]]
name = "card_status"
path = "src/bin/card_status.rs"
required-features = ["cli"]

[[bin]]
name = "card_test"
path = "src/bin/card_test.rs"
required-features = ["cli"]

[[bin]]
name = "search"
path = "src/bin/search.rs"
required-features = ["cli"]

[[example]]
name = "sylveon_deck_draw_speed"
required-features = ["csv-export"]
